--- a/Challenge-Final/Challenge-Final/Info.plist
+++ b/Challenge-Final/Challenge-Final/Info.plist
@@ -2,6 +2,8 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
+	<key>NSCameraUsageDescription</key>
+	<string>Permita o acesso a camera </string>
 	<key>NSPhotoLibraryAddUsageDescription</key>
 	<string>Salvar a foto em sua galeria</string>
 	<key>NSAppTransportSecurity</key>
